[gd_scene load_steps=16 format=3 uid="uid://d2kw86c1dl5b3"]

[ext_resource type="Shader" path="res://map_resources/rift/rift.gdshader" id="1_0t70s"]
[ext_resource type="Texture2D" uid="uid://bunkrgk3h3s84" path="res://generic_sprites/white_square.png" id="1_4dvye"]
[ext_resource type="Script" path="res://map_resources/rift/rift.gd" id="1_ohiun"]
[ext_resource type="AudioStream" uid="uid://b37sejiihkeqf" path="res://map_resources/rift/rift_amb.mp3" id="4_d3nmi"]
[ext_resource type="Script" path="res://audio_players/settings_based_audio_stream_player_3d.gd" id="5_enr6n"]
[ext_resource type="Script" path="res://interaction_handler/interaction_handler.gd" id="6_ti3mk"]
[ext_resource type="AudioStream" uid="uid://bo4b0spfbqe4j" path="res://map_resources/rift/error-4-199275.mp3" id="7_iv6f2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5loex"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3bpy8"]
render_priority = 0
shader = ExtResource("1_0t70s")
shader_parameter/y_billboard = false
shader_parameter/opacity = 1.0
shader_parameter/resolution = Vector2(100, 300)
shader_parameter/spiral_color = Color(0.262745, 0.0745098, 0.278431, 1)
shader_parameter/frequency = 8.0
shader_parameter/speed = 8.0
shader_parameter/brightness = 5.0
shader_parameter/balance = 0.27
shader_parameter/octaves = 4.0

[sub_resource type="Animation" id="Animation_6iix4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles3D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SettingsBasedAudioStreamPlayer3D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ppqxd"]
resource_name = "despawn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles3D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SettingsBasedAudioStreamPlayer3D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7whxf"]
_data = {
"RESET": SubResource("Animation_6iix4"),
"despawn": SubResource("Animation_ppqxd")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pun8h"]
particle_flag_align_y = true
emission_shape = 3
emission_box_extents = Vector3(0.5, 0.5, 0.5)
angle_min = -180.0
angle_max = 180.0
direction = Vector3(0, 0.5, 0)
initial_velocity_min = 2.0
initial_velocity_max = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8qou8"]
albedo_color = Color(0.839216, 0, 0.772549, 1)

[sub_resource type="QuadMesh" id="QuadMesh_17vk3"]
material = SubResource("StandardMaterial3D_8qou8")
size = Vector2(0.1, 0.1)

[node name="Rift" type="StaticBody3D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_ohiun")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_5loex")

[node name="Sprite3D" type="Sprite3D" parent="."]
material_override = SubResource("ShaderMaterial_3bpy8")
billboard = 1
texture = ExtResource("1_4dvye")
region_enabled = true
region_rect = Rect2(-160, -160, 400, 400)

[node name="SettingsBasedAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_d3nmi")
volume_db = -20.0
autoplay = true
script = ExtResource("5_enr6n")

[node name="InteractionHandler" type="Node" parent="."]
script = ExtResource("6_ti3mk")
duration = -1.0

[node name="WrongAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_iv6f2")
script = ExtResource("5_enr6n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7whxf")
}

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
emitting = false
amount = 64
lifetime = 2.0
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_pun8h")
draw_pass_1 = SubResource("QuadMesh_17vk3")

[connection signal="interaction_end" from="InteractionHandler" to="." method="_on_interaction_handler_interaction_end"]
[connection signal="interaction_start" from="InteractionHandler" to="." method="on_interact"]
